fix home page navigation on mobile

--- a/components/NavMobile/NavMobile.module.scss
+++ b/components/NavMobile/NavMobile.module.scss
@@ -106,7 +106,7 @@
       height: 100vh;
       justify-content: space-between;
       list-style-type: none;
-      margin: 0 0 0 55px;
+      margin: 0 0 0 45px;
       padding: 50px 30px;
       overflow-y: auto;
       position: fixed;
