--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,16 @@
 @import 'utils/mixins';
 
 .home {
+  @include header-gradient-animation;
+  animation: animatedGradient 6s ease infinite;
+  align-items: center;
+  background: linear-gradient(-40deg, $violet, $blue, $blue-aqua, $aquamarine);
+  background-size: 200% 200%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // Full height of page less the nav height
+  min-height: calc(100vh -  60px);
 
   > h1 {
     color: $white;
@@ -11,7 +21,7 @@
     margin-bottom: 30px;
     text-align: center;
 
-    @include respond_to(desktop) {
+    @include respond_to(tablet-and-larger) {
       font-size: 100px;
       line-height: 110px;
       margin-bottom: 50px;
@@ -20,94 +30,13 @@
 
   > h2 {
     color: $white;
+    margin-bottom: 20px;
     text-align: center;
   }
-}
 
-.container {
-  @include header-gradient-animation;
-  animation: animatedGradient 6s ease infinite;
-  background: linear-gradient(-40deg, $violet, $blue, $blue-aqua, $aquamarine);
-  background-size: 200% 200%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
+  > h3 {
+    color: $white;
+    margin-bottom: 10px;
+    text-align: center;
+  }
 }
