--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -21,6 +21,7 @@ h2 {
 }
 
 h3 {
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 500;
   line-height: 28px;
